--- a/config/locales/simple_form.zh-CN.yml
+++ b/config/locales/simple_form.zh-CN.yml
@@ -18,10 +18,18 @@ zh-CN:
         type: "报告类型"
         metrics: "指标组"
         
-      metric:
+      metric: &metric
         event_key: "事件"
         condition: "计算方法"
-        
+        comparison_operator: "比较符"
+        comparison: "过滤范围"
+        combine_action: "与另一事件组合计算"
+        name: "名称"
+        combine:
+          <<: *metric
+    hints:
+      metric:
+        name: "简短的描述，例如：唯一身份浏览量"
     # Labels and hints examples
     # labels:
     #   password: 'Password'
