--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -24,10 +24,18 @@ zh-CN:
       table: "表格"
     metric:
       count: "发生的次数"
-      user_count: "发生的用户人数"
-      val_sum: "值的总和"
-      average_val_by_count: "值的平均(按发生次数)"
-      average_val_by_user_count: "值的平均(按用户人数)"
+      user_num: "发生的用户人数"
+      sum: "值的总和"
+      
+      gt: ">"
+      lt: "<"
+      ge: ">="
+      le: "<="
+      eq: "=="
+      ne: "!="
+      between: "在..之间"
+      #average_val_by_count: "值的平均(按发生次数)"
+      #average_val_by_user_count: "值的平均(按用户人数)"
       
       
       addition: "加法"
@@ -39,11 +47,14 @@ zh-CN:
       last_month: "最近一月"
       last_day: "最近一天"
       
-      five_min: "5分钟"
-      one_hour: "1小时"
-      one_day: "1天"
-      one_week: "1周"
+      min5: "5分钟"
+      hour: "1小时"
+      day: "1天"
+      week: "1周"
       
   records_not_found: "抱歉，没有找到记录."
   confirm_msg: "确定执行该操作吗？"
-  
+  start_time: "开始时间"
+  end_time: "结束时间"
+  description: "描述"
+  search: "查询"
