--- a/config/locales/simple_form.zh-CN.yml
+++ b/config/locales/simple_form.zh-CN.yml
@@ -3,7 +3,7 @@ zh-CN:
     event_key: "事件"
     condition: "计算方法"
     comparison_operator: "比较符"
-    comparison: "过滤范围"
+    comparison: "事件的值"
     combine_action: "与另一事件组合计算"
     name: "名称"
   simple_form:
