--- a/config/locales/simple_form.zh-CN.yml
+++ b/config/locales/simple_form.zh-CN.yml
@@ -43,6 +43,7 @@ zh-CN:
       metric:
         name: "简短的描述"
         comparison: "用来过滤条件，非必填"
+        condition: "天数用于 取一周总和"
       period:
         compare_number: ""
     # Labels and hints examples
