--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -58,6 +58,7 @@ zh-CN:
       lte: "小于等于"
       eq: "等于"
       ne: "不等于"
+      handler: 相对时间
       register_time: "注册时间"
       last_login_time: "最后登陆时间"
       first_pay_time: "首次付费时间"
