--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -1,78 +1,2 @@
 zh-CN:
-  activerecord:
-    models:
-      report: 报告
-      
-      bar_report: "柱状图"
-      table_report: "表格"
-      line_report: "曲线图"
-      stack_report: "堆栈图"
-      period: "周期"
-      
-    attributes:
-      
-      
-  edit: "编辑"
-  destroy: "删除"
-  delete: "删除"
-  view: "查看"
-  
-  constants:
-    report:  
-      bar: "柱状图"
-      line: "曲线图"
-      table: "表格"
-    metric:
-      count: "发生的次数"
-      user_num: "发生的用户人数"
-      sum: "值的总和"
-      
-      gt: ">"
-      lt: "<"
-      ge: ">="
-      le: "<="
-      eq: "=="
-      ne: "!="
-      between: "在..之间"
-      #average_val_by_count: "值的平均(按发生次数)"
-      #average_val_by_user_count: "值的平均(按用户人数)"
-      
-      
-      addition: "加法"
-      division: "除法(算百分比)"
-      multiplication: "乘法"
-      subduction: "减法"
-    period:
-      last_week: "最近一周"
-      last_month: "最近一月"
-      last_day: "最近一天"
-      
-      min5: "5分钟"
-      hour: "1小时"
-      day: "1天"
-      week: "1周"
-    segment:
-      gt: "大于"
-      lt: "小于"
-      gte: "大于等于"
-      lte: "小于等于"
-      eq: "等于"
-      ne: "不等于"
-      handler: 相对时间
-      register_time: "注册时间"
-      last_login_time: "最后登陆时间"
-      first_pay_time: "首次付费时间"
-      last_pay_time: "最后付费时间"
-      grade: 等级
-      game_time: 游戏时间
-      pay_amount: 付费量
-      language: 语言
-      platform: 平台
-
-  records_not_found: "抱歉，没有找到记录."
-  confirm_msg: "确定执行该操作吗？"
-  start_time: "开始时间"
-  end_time: "结束时间"
-  description: "描述"
-  search: "查询"
-  
+  hello: "Hello world"
