--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -20,4 +20,8 @@ zh:
   no_ie_content: "我们很抱歉的通知您，您的IE浏览器版本过低（小于IE8），我们无法给您提供足够的支持，为了获取更好的浏览体验请升级您的IE浏览器或者使用以下浏览器"
   no_ie_screw_it: "或者，忽略掉此问题，"
   no_ie_just_enter: "继续浏览"
+  no_projects_title: "没有项目"
+  no_projects_description: "没有发现任何与您相关的项目或者您的项目已被删除，您可以联系管理员或者新建项目"
+  no_projects_create: "创建项目"
+
 
