--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -34,3 +34,4 @@ en:
   no_projects_title: "No Project"
   no_projects_description: "You haven't created any projects or your projects have been removed, please contact the administrator or create a new project"
   no_projects_create: "Create Project"
+  login_admin: "Log into administrator interface"
