add strong parameters

--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -57,3 +57,21 @@ en:
       not_saved:
         one: "1 error prohibited this %{resource} from being saved:"
         other: "%{count} errors prohibited this %{resource} from being saved:"
+  activerecord:
+    errors:
+      models:
+        user:
+          attributes:
+            email:
+              blank: "Please Specify an Email id"
+              taken: "Please use a different Email id"
+              invalid: "Please Specify a valid Email id"
+            password:
+              blank: "Please Specify a Password"
+              confirmation: "Password does not match"
+            password_confirmation:
+              blank: "Please Specify a Password Confirmation"
+            first_name:
+              blank: "Please Specify First Name"
+            last_name:
+              blank: "Please Specify Last Name"
