bug fix && new feature on user system

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -36,3 +36,4 @@ en:
   no_projects_create: "Create Project"
   login_admin: "Log into administrator interface"
   no_project_select: "Please select a project..."
+  account_settings: "Account settings"
