--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -16,6 +16,8 @@ en:
       timeout: "Your session expired. Please sign in again to continue."
       unauthenticated: "You need to sign in or sign up before continuing."
       unconfirmed: "You have to confirm your account before continuing."
+      ｕser:
+        "not_approved": "Your account has not been approved by your administrator yet."
     mailer:
       confirmation_instructions:
         subject: "Confirmation instructions"
